// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders border correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
  border-radius: 16px;
  border: 0.5px solid var(--border-color);
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <img
      alt="test-alt"
      class="emotion-1"
      src="data:undefined;base64,/mock/border-image.jpg"
      style="border-color: rgb(193, 199, 198); max-width: 100%; height: auto;"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
}

<div
    class="figure emotion-0"
    style="width: 700px;"
  >
    <img
      alt="/images/firstcluster.png"
      class="emotion-1 hero-img align-test-align"
      height="3000"
      src="data:undefined;base64,/mock/figure-image.jpg"
      style="border-color: rgb(193, 199, 198); max-width: 100%; height: auto;"
      width="5000"
    />
  </div>
</DocumentFragment>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 700px;
  cursor: pointer;
  margin-top: 24px;
  margin-bottom: 24px;
  display: block;
  max-width: 100%;
}

.emotion-1 {
  max-width: 100%;
  height: auto;
}

.emotion-2 {
  color: #444;
  font-size: 80%;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}

.dark-theme .emotion-2 {
  color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      role="button"
      tabindex="-1"
    >
      <img
        alt="test-alt"
        class="emotion-1"
        src="data:undefined;base64,/mock/lightbox-image.jpg"
        style="border-color: rgb(193, 199, 198); max-width: 100%; height: auto;"
      />
      <div
        class="emotion-2"
      >
        click to enlarge
      </div>
    </div>
  </div>
</DocumentFragment>
`;
